[package]
name = "rusteray"
version = "0.1.0"
authors = ["Alexander Lingtorp <alexander@lingtorp.com>"]
edition = "2018"

[dependencies]
minifb = "0.12"
tobj = "0.1.11"
rand = "0.7"
rand_distr = "0.2.2"
rand_pcg = "0.3.1"
threadpool = "1.0"
num_cpus = "1.0"
indicatif = "0.13.0"
bluenoise = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
